Fix: mobile horizontal scroll issue

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,13 @@
 html{
     scroll-behavior: smooth;
 }
+html, body {
+    overflow-x: hidden;
+    max-width: 100%;
+  }
+  img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+  }
+    
